[gd_scene load_steps=15 format=2]

[ext_resource path="res://game_pieces/goa_pieces/AIR.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/DisabledZone.gd" type="Script" id=2]
[ext_resource path="res://assets/board1024-v2.png" type="Texture" id=3]
[ext_resource path="res://scenes/game/grid/Grid.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/game/PhaseController.gd" type="Script" id=5]
[ext_resource path="res://scenes/game/hud/PhaseLabel.gd" type="Script" id=6]
[ext_resource path="res://scenes/game/hud/TeamGUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/tokens/afghan.png" type="Texture" id=8]
[ext_resource path="res://game_pieces/goa_pieces/LAV.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/game/Game.gd" type="Script" id=10]
[ext_resource path="res://assets/tokens/taliban-flag.png" type="Texture" id=11]
[ext_resource path="res://scenes/game/hud/UIPanel.tscn" type="PackedScene" id=13]
[ext_resource path="res://game_pieces/taliban_pieces/INS.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/game/Camera2D.gd" type="Script" id=26]

[node name="Game" type="Node2D"]
script = ExtResource( 10 )
pieces = [ ExtResource( 1 ), ExtResource( 9 ) ]
number_of_taliban = 1
taliban_piece = ExtResource( 21 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="DisabledZone" type="ColorRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 768.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.501961 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" parent="." instance=ExtResource( 4 )]

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
margin_left = 15.0
margin_top = 15.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/VBoxContainer"]
margin_right = 285.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 42.0
margin_bottom = 17.0
text = "Phase:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhaseLabel" type="Label" parent="HUD/VBoxContainer/HBoxContainer"]
margin_left = 46.0
margin_top = 3.0
margin_right = 156.0
margin_bottom = 17.0
text = "GoA Player Setup"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhaseCompleteButton" type="Button" parent="HUD/VBoxContainer/HBoxContainer"]
margin_left = 160.0
margin_right = 276.0
margin_bottom = 20.0
text = "Phase Complete"

[node name="HBoxContainer2" type="HBoxContainer" parent="HUD/VBoxContainer"]
margin_top = 24.0
margin_right = 285.0
margin_bottom = 72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/VBoxContainer/HBoxContainer2"]
margin_right = 43.0
margin_bottom = 48.0
size_flags_vertical = 5
text = "Status:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="HUD/VBoxContainer/HBoxContainer2"]
margin_left = 47.0
margin_right = 285.0
margin_bottom = 48.0
text = "Click to place your seven Goa Pieces:
- to the North of the red line 
- max one piece per square."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="CanvasLayer" parent="."]

[node name="GoaGUI" parent="UI" instance=ExtResource( 7 )]
team_name = "GOA"
flag = ExtResource( 8 )
starting_villages = 8
team_color = Color( 0.976471, 0.709804, 0.709804, 1 )

[node name="TalibanGUI" parent="UI" instance=ExtResource( 7 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -398.0
margin_top = -512.0
margin_right = 0.0
margin_bottom = 512.0
team_name = "Taliban"
flag = ExtResource( 11 )
starting_villages = 2

[node name="PlacementUI" parent="UI" instance=ExtResource( 13 )]
margin_left = 26.0
margin_top = 307.0
margin_right = 392.0
margin_bottom = 730.0
panel_heading = "Starting Pieces"

[node name="PlacementTool" type="Node2D" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="PlacementTool"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0

[node name="ColorRect" type="ColorRect" parent="PlacementTool"]
self_modulate = Color( 1, 1, 1, 0.501961 )
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
color = Color( 1, 1, 1, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhaseController" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 512 )
current = true
script = ExtResource( 26 )
__meta__ = {
"_edit_group_": true
}

[node name="PositionMarkers" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlacementUIGoA" type="Control" parent="PositionMarkers"]
margin_left = 27.0
margin_top = 309.0
margin_right = 67.0
margin_bottom = 349.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlacementUITaliban" type="Control" parent="PositionMarkers"]
margin_left = 1424.0
margin_top = 309.0
margin_right = 1464.0
margin_bottom = 349.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HUD/VBoxContainer/HBoxContainer/PhaseCompleteButton" to="PhaseController" method="_on_PhaseCompleteButton_pressed"]
[connection signal="phase_changed" from="PhaseController" to="HUD/VBoxContainer/HBoxContainer/PhaseLabel" method="_on_PhaseController_phase_changed"]
[connection signal="phase_changed" from="PhaseController" to="DisabledZone" method="_on_PhaseController_phase_changed"]
[connection signal="phase_changed" from="PhaseController" to="." method="_on_PhaseController_phase_changed"]
